--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-07  Michael Natterer  <mitch@gimp.org>
+
+	* app/app-docs.sgml
+	* app/app-sections.txt: added gimpdisplayshell-draw.
+
 2004-02-06  Sven Neumann  <sven@gimp.org>
 
 	* app/app-sections.txt: updated.
