--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-07  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Typo fix.
+
 2004-02-05  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
 	* hr.po: Updated Croatian translation.
