--- a/po-script-fu/cs.po
+++ b/po-script-fu/cs.po
@@ -1148,7 +1148,7 @@ msgstr "Velikost efektu (pixely)"
 
 #: plug-ins/script-fu/scripts/copy-visible.scm.h:1
 msgid "<Image>/Edit/Copy _Visible"
-msgstr "<Image>/Úpravy/Kopírovat ?viditelné"
+msgstr "<Image>/Úpravy/Kopírovat viditelné"
 
 #: plug-ins/script-fu/scripts/crystal-logo.scm.h:1
 msgid "<Toolbox>/Xtns/Script-Fu/Logos/Crystal..."
