2004-02-07  Manish Singh  <yosh@gimp.org>
        * configure.in: fix use of EXEEXT in tiff checks. Fixes bug #133763.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12304 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-07  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: fix use of EXEEXT in tiff checks. Fixes bug #133763.
+
 2004-02-07  Hans Breuer  <hans@breuer.org>
 
 	* gimpdefs.msc : new file to keep common definitions for the msc build
