Updated Finnish translation by Tapio Lehtonen  <tapio.lehtonen@iki.fi>
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12306 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-08  Jarkko Ranta  <jjranta@cc.joensuu.fi>
+
+	* fi.po: Updated Finnish translation by Tapio Lehtonen  <tapio.lehtonen@iki.fi>
+
 2004-02-06  Stanislav Brabec  <sbrabec@suse.cz>
 
 	* de.po: Fixed Portait <-> Landscape.
