2004-02-08  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/image.pdb (image_rotate): fixed typo:
	s/spacified/specified/. Spotted by Kevin Cozens.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12307 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-08  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/image.pdb (image_rotate): fixed typo:
+	s/spacified/specified/. Spotted by Kevin Cozens.
+
+	* app/pdb/image_cmds.c
+	* libgimp/gimpimage_pdb.c: regenerated.
+
 2004-02-08  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/tiff.c: applied a modified patch from Pablo
