2004-02-08  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppickbutton.c: code cleanup, no changes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12308 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimppickbutton.c: some code cleanup, no changes.
+
 2004-02-08  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/image.pdb (image_rotate): fixed typo:
