--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-02-08  Sven Neumann  <sven@gimp.org>
 
+	* app/plug-in/plug-in-rc.c (plug_in_rc_parse): return FALSE if the
+	file wasn't found.
+
+	* app/plug-in/plug-ins.c (plug_ins_init): don't output the error
+	message from plug_in_rc_parse() if it failed for file not found.
+
+	Fixes bug #133490.
+	
+2004-02-08  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppickbutton.c: some code cleanup, no changes.
 
 2004-02-08  Michael Natterer  <mitch@gimp.org>
