--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-02-09  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpitem.[ch]: added progress callback pointers to
+	gimp_item_scale() and its variants.
+
+	* app/core/gimpchannel.c
+	* app/core/gimpdrawable.c
+	* app/core/gimpimage-scale.c
+	* app/core/gimplayer.c
+	* app/core/gimpselection.c
+	* app/gui/layers-commands.c97999
+	* app/paint-funcs/paint-funcs.[ch]
+	* app/vectors/gimpvectors.c
+	* tools/pdbgen/pdb/layer.pdb: changed accordingly. Fixes bug #97999.
+
+	* app/pdb/layer_cmds.c: regenerated.
+
 2004-02-08  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpiscissorstool.c (gimp_iscissors_tool_button_press): 
