--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/text-circle.scm: removed some workarounds
+	for bugs in the GIMP 1.2 text functions that don't exist any longer.
+
+2004-02-09  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage-undo-push.c (undo_pop_layer) (undo_push_layer)
 	* app/paint-funcs/paint-funcs.c (scale_region): ifdef'ed out debug
 	output.
