--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-09  Manish Singh  <yosh@gimp.org>
+
+	* app/file/Makefile.am
+	* app/paint/Makefile.am
+	* app/text/Makefile.am
+	* app/xcf/Makefile.am: changed GTK_CFLAGS to GDK_PIXBUF_CFLAGS, since
+	we don't use any gtk/gdk functions here. This especially helps in the
+	text directory, since it avoids problems on broken setups with old
+	fontconfig stuff in the X11 directory lying around.
+
 2004-02-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/scripts/text-circle.scm: removed some workarounds
