--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-09  Sven Neumann  <sven@gimp.org>
+
+	* app/Makefile.am: some updates to the gimp-console rules so that
+	it fails less badly.
+
 2004-02-09  Manish Singh  <yosh@gimp.org>
 
 	* app/file/Makefile.am
