2004-02-09  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/curve_bend.c: applied patch from Wolfgang Hofer
	that fixes bug #133244.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12322 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/curve_bend.c: applied patch from Wolfgang Hofer
+	that fixes bug #133244.
+
+2004-02-09  Sven Neumann  <sven@gimp.org>
+
 	* app/Makefile.am: some updates to the gimp-console rules so that
 	it fails less badly.
 
