2004-02-09  Michael Natterer  <mitch@gimp.org>
	* app/gui/gui.c (gui_libs_init): added runtime check for
	fontconfig > 2.2.0 and abort with a dialog box telling the
	user to upgrade fontconfig if the requirement is not met.
	Fixes all bugs like #133818.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12324 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/gui/gui.c (gui_libs_init): added runtime check for
+	fontconfig > 2.2.0 and abort with a dialog box telling the
+	user to upgrade fontconfig if the requirement is not met.
+	Fixes all bugs like #133818.
+
 2004-02-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/curve_bend.c: applied patch from Wolfgang Hofer
