2004-02-09  Simon Budig  <simon@gimp.org>
	* plug-ins/script-fu/scripts/add-bevel.scm: Fixed Undo
	handling, make sure that the bumpmap is big enough to
	avoid artefacts.

	Fixes bug #130636.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12325 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-09  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/script-fu/scripts/add-bevel.scm: Fixed Undo
+	handling, make sure that the bumpmap is big enough to
+	avoid artefacts.
+
+	Fixes bug #130636.
+
 2004-02-09  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/gui.c (gui_libs_init): added runtime check for
