--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-09  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am (tips_POFILES): added hr.po (Croatian).
+
+	* hr.po: removed fuzzy declaration from header.
+
 2004-02-09  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
 	* hr.po: Updated Croatian translation.
@@ -12,7 +18,7 @@
 
 2004-01-27  Pablo G. del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 	
 2004-01-27  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -66,7 +72,7 @@
 
 2004-01-07  Pablo G. del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 
 2003-12-19  Sven Neumann  <sven@gimp.org>
 
@@ -96,7 +102,7 @@
 
 2003-11-25  Pablo G. del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation.
+	* es.po: Updated Spanish translation.
 
 2003-11-25  Miloslav Trmac  <mitr@volny.cz>
 
@@ -221,7 +227,7 @@
 
 2003-08-26  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
-        * es.po: Updated Spanish translation by
+	* es.po: Updated Spanish translation by
                  Francisco Javier F. Serrador <serrador@arrakis.es>.
 
 2003-08-25  Ole Laursen  <olau@hardworking.dk>
@@ -341,7 +347,7 @@
 
 2003-03-02  Duarte Loreto <happyguy_pt@hotmail.com>
 
-        * pt.po: Updated Portuguese translation.
+	* pt.po: Updated Portuguese translation.
 
 2003-02-26  Sven Neumann  <sven@gimp.org>
 
