2004-02-10  Sven Neumann  <sven@gimp.org>
	* app/tools/gimptexttool.c (gimp_text_tool_register): set
	GIMP_CONTEXT_FONT_MASK. Fixes bug #133067.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12327 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-10  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimptexttool.c (gimp_text_tool_register): set
+	GIMP_CONTEXT_FONT_MASK. Fixes bug #133067.
+
 2004-02-09  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/script-fu/scripts/add-bevel.scm: Fixed Undo
