--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-10  Jan Morén  <jan.moren@lucs.lu.se>
+ 
+	* sv.po: Updated Swedish translation.
+	  
 2004-02-09  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added hr.po (Croatian).
