2004-02-10  Sven Neumann  <sven@gimp.org>
	* configure.in: warn when gimpprint is older than version 4.2.6.
	It's probably too late to introduce a dependency on that version
	but we would like people to update in order to avoid bug #125283.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12333 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-02-10  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: warn when gimpprint is older than version 4.2.6.
+	It's probably too late to introduce a dependency on that version
+	but we would like people to update in order to avoid bug #125283.
+
+2004-02-10  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpcolorframe.c (gimp_color_frame_init): make the
 	value labels selectable as suggested by Mariano Suárez-Alvarez in
 	bug #133958.
