2004-02-10  Sven Neumann  <sven@gimp.org>
	* themes/Default/images/Makefile.am: added a rule to create a
	header containing a warning pixbuf that we can use from the core.

	* app/base/temp-buf.c (temp_buf_new): rewritten an optimisation so
	that it works for any number of bytes per pixel.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12337 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-10  Sven Neumann  <sven@gimp.org>
+
+	* themes/Default/images/Makefile.am: added a rule to create a
+	header containing a warning pixbuf that we can use from the core.
+
+	* app/base/temp-buf.c (temp_buf_new): rewritten an optimisation so
+	that it works for any number of bytes per pixel.
+
 2004-02-10  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpviewable.[ch]: added new function
