2004-02-10 Henrik Brix Andersen <brix@gimp.org>
* app/gui/preferences-dialog.c (prefs_dialog_new): prefix preview
size labels with "Default" to avoid misunderstandings.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12339 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-10  Henrik Brix Andersen  <brix@gimp.org>
+
+	* app/gui/preferences-dialog.c (prefs_dialog_new): prefix preview
+	size labels with "Default" to avoid misunderstandings.
+
 2004-02-10  Sven Neumann  <sven@gimp.org>
 
 	* themes/Default/images/Makefile.am (CORE_IMAGES): use the
